PRJ-129 Attach agent dynamically